# InboxPilot-An-OpenEnv-Benchmark-for-AI-Email-Triage-and-Operations-Meta-X-Scaler-R1-

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  val.txt  val2.txt
agents/: __init__.py  decision_agent.py
app/: __init__.py  env.py  graders.py  main.py  models.py  rewards.py  tasks.py  utils.py
data/schemas/: .gitkeep
data/tasks/: easy_support_triage.json  hard_exec_risk_management.json  medium_customer_resolution.json
demo/: __init__.py  compare_agents.py
environment/: __init__.py  calendar_env.py  email_env.py
inboxpilot/: agent.py  environment.py  reward.py  sample_data.py  train.py
server/: __init__.py  app.py
tests/: test_api.py  test_demo_agents.py  test_env.py  test_graders.py
utils/: __init__.py  reward.py  scoring.py
