[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxpilot-openenv"
version = "1.0.0"
description = "InboxPilot professional email triage and operations environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "InboxPilot Team" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "httpx",
    "pytest",
    "python-dotenv",
    "pyyaml",
    "fastmcp",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort"
]

[project.scripts]
server = "server.app:main"
inboxpilot-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]
